[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "aleph-sdk-python"
description = "Lightweight Python Client library for the Aleph.im network"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Aleph.im Team", email = "hello@aleph.im" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: aiohttp",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dynamic = [ "version" ]
dependencies = [
  "aiohttp>=3.8.3",
  "aleph-message>=1.0.5",
  "aleph-superfluid>=0.3",
  # OPTIMIZATION: Relaxed strict pins (==) to ranges (>=) for library compatibility
  "base58>=2.1.1",           
  "coincurve>=15; python_version>='3.9'", 
  "eth-abi>=5.0.1; python_version>='3.9'",
  "eth-typing>=5.0.1",
  "jwcrypto>=1.5.6",
  "pydantic>=2,<3",
  "pydantic-settings>=2",
  "pynacl>=1.5",             
  "python-magic",
  "typing-extensions",
  "web3>=7.10",
]

[project.optional-dependencies]
all = [
  "aleph-sdk-python[cosmos,dns,docs,ledger,mqtt,nuls2,substrate,solana,tezos,encryption]",
]
cosmos = [ "cosmospy" ]
dns = [ "aiodns" ]
docs = [ "sphinxcontrib-plantuml" ]
encryption = [
  "eciespy; python_version<'3.11'",
  "eciespy>=0.3.13; python_version>='3.11'",
]
ledger = [ "ledgereth>=0.10" ] # Relaxed pin
mqtt = [
  "aiomqtt<=0.1.3", # Kept strict if specifically required by old API
  "certifi",
  "click",
]
nuls2 = [ "aleph-nuls2" ]
solana = [
  "base58",
  "pynacl",
]
substrate = [
  "py-sr25519-bindings",
  "substrate-interface",
]
tezos = [ "pytezos-crypto>=3.13.4" ] # Relaxed pin

[project.urls]
Documentation = "https://aleph.im/"
Homepage = "https://github.com/aleph-im/aleph-sdk-python"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [ "src/aleph" ]
artifacts = [
  "pyproject.toml",
  "README.md",
  "LICENSE.txt",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/aleph",
  "pyproject.toml",
  "README.md",
  "LICENSE.txt",
]

# ==========================================
# TESTING ENVIRONMENTS
# ==========================================

[[tool.hatch.envs.all.matrix]]
# FIXED: Added 3.8 and 3.12 to match classifiers
python = [ "3.8", "3.9", "3.10", "3.11", "3.12" ]

[tool.hatch.envs.testing]
features = [
  "cosmos",
  "dns",
  "ledger",
  "nuls2",
  "substrate",
  "solana",
  "tezos",
  "encryption",
]
dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pytest-asyncio>=0.23.0",
  "pytest-aiohttp>=1.0.0",
  "aioresponses>=0.7.6", # Moved here from main dependencies
  "fastapi",
  "httpx",
  "secp256k1",
]

[tool.hatch.envs.testing.scripts]
test = "pytest {args:} ./src/ ./tests/ ./examples/"
test-cov = "pytest --cov {args:} ./src/ ./tests/ ./examples/"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

# ==========================================
# LINTING & FORMATTING
# ==========================================

[tool.hatch.envs.linting]
detached = true
dependencies = [
  "black>=24.2.0",
  "mypy>=1.9.0",
  "mypy-extensions>=1.0.0",
  "ruff>=0.4.0",
  "isort>=5.13.0",
  "pyproject-fmt>=2.0.0",
]

[tool.hatch.envs.linting.scripts]
typing = "mypy --config-file=pyproject.toml {args:} ./src/ ./tests/ ./examples/"
style = [
  "ruff check {args:.} ./src/ ./tests/ ./examples/",
  "black --check --diff {args:} ./src/ ./tests/ ./examples/",
  "isort --check-only --profile black {args:} ./src/ ./tests/ ./examples/",
  "pyproject-fmt --check pyproject.toml",
]
fmt = [
  "black {args:} ./src/ ./tests/ ./examples/",
  "ruff check --fix {args:.} ./src/ ./tests/ ./examples/",
  "isort --profile black {args:} ./src/ ./tests/ ./examples/",
  "pyproject-fmt pyproject.toml",
  "style",
]
all = [ "style", "typing" ]

# ==========================================
# TOOL CONFIGURATIONS
# ==========================================

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [ "src" ]
addopts = "-vv -m \"not ledger_hardware\""
norecursedirs = [ "*.egg", "dist", "build", ".tox", ".venv", "*/site-packages/*" ]
testpaths = [ "tests/unit" ]
markers = { ledger_hardware = "marks tests as requiring ledger hardware" }

[tool.coverage.run]
branch = true
parallel = true
source = [ "src/" ]
omit = [ "*/site-packages/*" ]

[tool.coverage.paths]
source = [ "src/" ]
omit = [ "*/site-packages/*" ]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
exclude = [ "conftest.py" ]
show_column_numbers = true
check_untyped_defs = true
install_types = true
non_interactive = true
ignore_missing_imports = true
follow_imports = "silent"
allow_redefinition = true
